1999-01-14  Mike Grupenhoff <kashmir@munge.com>

	* server-src/dumper.c (make_tapeheader): explicitly compare
	srvcompress against srvcomp_none instead of assuming that
	srvcomp_none's value is 0.

1999-01-14  Mike Grupenhoff <kashmir@munge.com>

	* server-src/dumper.c: move max() macro to top of file.  Add min()
	* server-src/dumper.c (databuf_write): use min() to determine the
	copy size
	* server-src/dumper.c (databuf_flush): more clearly calculate the
	buffer offset in the write loop

1999-01-14  Mike Grupenhoff <kashmir@munge.com>

	* server-src/dumper.c (databuf_write): Egads!  Also increment the
	source pointer doing a partial buf copy

1999-01-14  Mike Grupenhoff <kashmir@munge.com>

	* common-src/bsd-security.c (check_user): use getpwnam(CLIENT_LOGIN)
	instead of getpwuid(getuid()), in case our caller has not done
	the setuid().

1999-01-12  Mike Grupenhoff <kashmir@munge.com>

	* server-src/dumper.c (add_msg_data): properly check for half-sent
	msg lines.

1999-01-11  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amstatus.pl.in: fix a divide by zero error.

1999-01-11  Mike Grupenhoff <kashmir@munge.com>

	* server-src/dumper.c (add_msg_data): clarify and comment.  Remove
	'len' arg.  Const 'str' arg.
	* server-src/dumper.c (do_dump): compresspid and indexpid should
	be pid_t's.  Also, remove len from add_msg_data call.

1999-01-11  Mike Grupenhoff <kashmir@munge.com>

	* server-src/fileheader.c (parse_file_header): const the buffer
	argument
	* server-src/fileheader.h: update parse_file_header proto for const
	change

1999-01-05  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amstatus.pl.in: report the current dump when reporting
	the busy time of each dumper.

1998-12-30  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/dumper.c: open temporary holding file with O_TRUNC flags
	and with mode 0600.

1998-12-28  John R. Jackson  <jrj@purdue.edu>
